# relay

./: .gitignore  Makefile  README.md  go.mod
.relayhome/.relay/: config.json
client/: client.go
cmd/relay/: main.go
cmd/relay/commands/: artifact.go  cap.go  client.go  config.go  daemon.go  local.go  meta.go  prompt.go  proxy.go  report.go  root.go  run.go  state.go  thread.go  wrap.go
docs/: architecture.md  moltbook-integration.md  plugin-guide.md
examples/python/: agent_loop.py  example.py
examples/ts/: example.ts
internal/artifacts/: store.go
internal/cache/: cache.go
internal/daemon/: db.go  server.go  ui.go
internal/events/: store.go
internal/local/: engine.go
internal/lock/: lock.go
internal/openai/: client.go
internal/plugins/: builtins.go  registry.go
internal/policy/: policy.go
internal/proxy/: ca.go  proxy.go
internal/rpb/: rpb.go
internal/state/: compact.go  schema.go  store.go
internal/storage/: db.go
sdk/python/: pyproject.toml
sdk/python/relay_client/: __init__.py  client.py  errors.py
sdk/ts/relay-client/: package.json  tsconfig.json
sdk/ts/relay-client/src/: index.ts
tests/: artifact_test.go  cache_test.go  concurrency_test.go  integration_test.go  smoke_m1.sh  state_test.go
