[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "relay-client"
version = "1.0.0"
description = "relay Python SDK — minimal client for the relay daemon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/relaydev/relay"

[tool.setuptools.packages.find]
where = ["."]
